--- a/public/css/redrock.css
+++ b/public/css/redrock.css
@@ -1,7 +1,9 @@
-.img1{
+#header img,#banner img{
     width: 90rem;
 }
-.center{
+
+/* 中间总体布局样式 */
+#container{
     width: 90rem;
     height: 90rem;
     background-color: #B6D0FA;
@@ -9,7 +11,8 @@
     justify-content:center;
     align-items:center;
 }
-.center_main{
+/* 主体内容样式 */
+#main{
     width: 70rem;
     height: 79rem;
     background-color: #FFFFFF;
@@ -19,25 +22,26 @@
     flex-wrap:wrap;
     align-items:center;
 }
-.main_1{
+/* 第一行姓名栏 */
+#name{
     width: 70rem;
     height: 9rem;
 }
-.top1{
+.content{
     width: 70rem;
     height: 9rem;
     display: flex;
     flex-direction: row;
     align-items:flex-end;
 }
-.t1_l{
+.content_left{
     width: 25rem;
     height: 5rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.t1_ll{
+.content_left_l{
     width: 7rem;
     height: 5rem;
     font-family: 'tiao';
@@ -45,7 +49,7 @@
     font-size: 4rem;
     text-align: right;
 }
-.t1_lr{
+.content_left_r{
     width: 7rem;
     height: 5rem;
     font-family: 'tiao';
@@ -53,20 +57,20 @@
     font-size: 4rem;
     text-align: right;
 }
-.t1_r{
+.content_right{
     width: 40rem;
     height: 5rem;
     background-color:white; 
     color: #EB6A2D;
     font-size: 3rem;
 }
-.bottom1{
+.line{
     width: 70rem;
     height: 1rem;
     display: flex;
     justify-content: center;
 }
-.img2{
+.pic_line{
     width: 60rem;
     height: 1rem;
 }
@@ -74,7 +78,7 @@
     width: 70rem;
     height: 9rem;
 }
-.t2_l{
+.examnumber_left{
     width: 25rem;
     height: 5rem;
     font-family: 'tiao';
@@ -82,11 +86,12 @@
     font-size: 4rem;
     text-align: right;
 }
-.main_3{
+/* 总分栏 */
+#score{
     width: 70rem;
     height: 9rem;
 }
-.t3_ll{
+.score_left_l{
     width: 7rem;
     height: 5rem;
     font-family: 'tiao';
@@ -94,7 +99,7 @@
     font-size: 4rem;
     text-align: right;
 }
-.t3_lr{
+.score_left_r{
     width: 7rem;
     height: 5rem;
     font-family: 'tiao';
@@ -102,7 +107,7 @@
     font-size: 4rem;
     text-align: right;
 }
-.t3_r{
+.score_right{
     width: 40rem;
     height: 5rem;
     color: #EB6A2D;
@@ -110,7 +115,7 @@
     display: flex;
     flex-direction: row;
 }
-.t3_rl{
+.score_right_l{
     width: 12rem;
     height: 5rem;
     font-family: 'tiao';
@@ -118,25 +123,23 @@
     color: #0B2B69;
     line-height: 5rem;
 }
-.t3_rr{
+.score_right_r{
     width: 15rem;
     height: 5rem;
     color: #EB6A2D;
     font-size: 3rem;
 }
-.main_4{
+/* 科目栏 阅读栏*/
+#subject,#reading{
     width: 70rem;
     height: 9rem;
 }
-.main_5{
-    width: 70rem;
-    height: 9rem;
-}
-.main_6{
+/* 写作栏 */
+#writing{
     width: 70rem;
     height: 10rem;
 }
-.t6_rl{
+#writing_right_l{
     width: 18rem;
     height: 5rem;
     font-family: 'tiao';
@@ -144,32 +147,32 @@
     color: #0B2B69;
     line-height: 5rem;
 }
-.t6_rr{
+#writing_right_r{
     width: 15rem;
     height: 5rem;
     color: #EB6A2D;
     font-size: 3rem;
 }
-.main_7{
+#pic{
     width: 70rem;
     height: 18rem;
 }
-.bottom2{
+#pic_line{
     width: 70rem;
     height: 11rem;
     display: flex;
     justify-content: space-around ; 
     align-items: flex-end;
 }
-.img3{
+.pic_line2{
     width: 40rem;
     height: 1rem;
 }
-.imgmo{
+.ink{
     width: 5rem;
     height: 5rem;
 }
-.bottom{
+#footer{
     width: 90rem;
     height: 9rem;
     background-color: #B6D0FA;
@@ -177,7 +180,7 @@
     justify-content: center;
     align-items: center;
 }
-.b_main{
+#footer_content{
     width: 50rem;
     height: 5rem;
     font-size: 3rem;
